--- a/ExampleProject/Storyboard/Base.lproj/Main.storyboard
+++ b/ExampleProject/Storyboard/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Repository List Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="RepositoryListController" customModule="ExamProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RepositoryListController" customModule="ExampleProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -43,7 +43,7 @@
         <!--User Profile Controller-->
         <scene sceneID="b2T-g2-PwH">
             <objects>
-                <viewController storyboardIdentifier="UserProfileController" id="itv-DN-QDR" customClass="UserProfileController" customModule="ExamProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UserProfileController" id="itv-DN-QDR" customClass="UserProfileController" customModule="ExampleProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qIQ-72-YCN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -77,43 +77,43 @@
         <!--Repository Detail Controller-->
         <scene sceneID="6Ex-vB-fYg">
             <objects>
-                <viewController storyboardIdentifier="RepositoryDetailController" id="Ng4-Q3-XhO" customClass="RepositoryDetailController" customModule="ExamProject" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RepositoryDetailController" id="Ng4-Q3-XhO" customClass="RepositoryDetailController" customModule="ExampleProject" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xz2-d0-WHF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fork Count" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="afe-3y-cGs">
-                                <rect key="frame" x="32" y="116.5" width="311" height="20.5"/>
+                                <rect key="frame" x="32" y="84.5" width="311" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4hD-r3-tx5">
-                                <rect key="frame" x="32" y="149" width="311" height="21"/>
+                                <rect key="frame" x="32" y="117" width="311" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DefaultBranch" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ny4-4w-CKw">
-                                <rect key="frame" x="32" y="182" width="311" height="21"/>
+                                <rect key="frame" x="32" y="150" width="311" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avatar Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Awk-qa-uHf">
-                                <rect key="frame" x="32" y="215" width="311" height="21"/>
+                                <rect key="frame" x="32" y="183" width="311" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B75-0i-ZIB">
-                                <rect key="frame" x="32" y="244" width="311" height="20.5"/>
+                                <rect key="frame" x="32" y="212" width="311" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repository Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V18-yd-ec6">
-                                <rect key="frame" x="32" y="84" width="311" height="20.5"/>
+                                <rect key="frame" x="32" y="52" width="311" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -130,7 +130,7 @@
                             <constraint firstItem="ny4-4w-CKw" firstAttribute="top" secondItem="4hD-r3-tx5" secondAttribute="bottom" constant="12" id="ZRP-Un-g0W"/>
                             <constraint firstItem="pK6-4B-tFo" firstAttribute="trailing" secondItem="ny4-4w-CKw" secondAttribute="trailing" constant="32" id="b7y-WZ-az2"/>
                             <constraint firstItem="pK6-4B-tFo" firstAttribute="trailing" secondItem="afe-3y-cGs" secondAttribute="trailing" constant="32" id="bJ7-af-b2g"/>
-                            <constraint firstItem="V18-yd-ec6" firstAttribute="top" secondItem="pK6-4B-tFo" secondAttribute="top" constant="64" id="cZc-dN-PdN"/>
+                            <constraint firstItem="V18-yd-ec6" firstAttribute="top" secondItem="pK6-4B-tFo" secondAttribute="top" constant="32" id="cZc-dN-PdN"/>
                             <constraint firstItem="afe-3y-cGs" firstAttribute="top" secondItem="V18-yd-ec6" secondAttribute="bottom" constant="12" id="cbV-vP-vKm"/>
                             <constraint firstItem="pK6-4B-tFo" firstAttribute="trailing" secondItem="B75-0i-ZIB" secondAttribute="trailing" constant="32" id="ePJ-4h-HZt"/>
                             <constraint firstItem="pK6-4B-tFo" firstAttribute="trailing" secondItem="V18-yd-ec6" secondAttribute="trailing" constant="32" id="fMK-4z-NdJ"/>
